# datafusion-server

./: .envrc  .gitignore  CHANGELOG.md  CONTRIB.md  Cargo.toml  LICENSE  LICENSE.md  README.md  clippy-all.sh  config.toml  flake.nix  make-containers.sh  openapi.v1.yaml  rust-toolchain.toml
.github/workflows/: doc-trigger.yml  manual-trigger.yml  push-trigger.yml
data/: superstore.csv
doc/: openapi.v1.yaml
doc/website/: .gitignore  clean.sh  hugo.toml  prepare.sh
doc/website/content/en/: _index.md
doc/website/content/en/arrow-flight/: _index.md  client.md  server.md
doc/website/content/en/basic-query/: _index.md
doc/website/content/en/data-source/: _index.md  avro.md  csv.md  definition-basics.md  delta-lake.md  json.md  ndjson.md  object-store.md  parquet.md  what-datasource.md
doc/website/content/en/database/: _index.md  mysql.md  postgres.md  seamless-query.md
doc/website/content/en/installation/: _index.md  telemetry.md  using-crate.md  using-docker.md
doc/website/content/en/introduction/: _index.md  license.md  what-is.md
doc/website/content/en/processor/: _index.md
doc/website/content/en/session-context/: _index.md  operation.md  what-session.md
doc/website/content/en/using-python-plugin/: _index.md  datasource-connector-plugin.md  post-processor-plugin.md
doc/website/data/menu/: extra.yaml
doc/website/i18n/: en.yaml
doc/website/static/: custom.css
example/flight-client/: Cargo.toml  README.md
example/flight-client/src/: main.rs
example/multipart-uploader/: uploader.html
example/perspective-viewer/: viewer.html
example/prometheus-docker/: prometheus.yml  start.sh  stop.sh
lib/: Cargo.toml
lib/src/: lib.rs  settings.rs  statistics.rs
lib/src/context/: mod.rs  session.rs  session_manager.rs  variable.rs
lib/src/data_source/: connector_plugin.rs  csv.rs  csv_file.rs  data_type.rs  deltalake.rs  flight_stream.rs  infer_schema.rs  json.rs  json_rest.rs  location_uri.rs  mod.rs  nd_json.rs  nd_json_file.rs  nd_json_rest.rs  parquet.rs  raw_json_file.rs  raw_json_rest.rs  schema.rs  with_jsonpath.rs
lib/src/data_source/database/: any_pool.rs  column_binder.rs  database_manager.rs  dtype_mysql.rs  dtype_postgres.rs  engine_type.rs  mod.rs  table_processor.rs  table_provider.rs  table_register.rs  table_resolver.rs
lib/src/data_source/decoder/: build_record_batch.rs  json_decoder.rs  mod.rs
lib/src/data_source/local_fs/: fs.rs  json_file.rs  mod.rs
lib/src/data_source/location/: file.rs  mod.rs  uri.rs
lib/src/data_source/object_store/: build_store.rs  credential_manager.rs  mod.rs  reader.rs  registry.rs  writer.rs
lib/src/data_source/reader/: build_record_batch.rs  json_decoder.rs  mod.rs
lib/src/data_source/transport/: http.rs
lib/src/data_source/writer/: csv_file.rs  parquet_file.rs
lib/src/plugin/: convert_py_data.rs  definition.rs  exec_processor.rs  init_python.rs  mod.rs  plugin_manager.rs  plugin_map.rs
lib/src/request/: body.rs  custom_extractor.rs  format.rs  header.rs  mod.rs  query_param.rs
lib/src/response/: http_error.rs  http_response.rs  mod.rs  receiver_stream.rs  record_batch_stream.rs
lib/src/response/format/: arrow_stream.rs  csv_stream.rs  json_array_stream.rs
lib/src/response/handler/: arrow_csv.rs  arrow_parquet.rs  data_source.rs  dataframe.rs  json_csv.rs  mod.rs  session.rs  variable.rs
lib/src/server/: flight.rs  http.rs  interval_worker.rs  metrics.rs  mod.rs  routes.rs  signal_handler.rs
lib/src/udf/: array_object.rs  mod.rs  registry.rs
plugins/datasource-plugin-example/: CHANGELOG.md  plugin_def.toml  plugin_main.py  requirements.txt  test_main.py
plugins/datasource-plugin-excel/: plugin_def.toml  plugin_main.py
plugins/processor-plugin-pivot-table/: README.md  plugin_def.toml  requirements.txt
src/: lib.rs  settings.rs
src/context/: session_manager.rs
src/data_source/: connector_plugin.rs  json_file.rs  mod.rs
src/data_source/reader/: build_record_batch.rs  json_decoder.rs
src/data_source/writer/: csv_file.rs  fs.rs  json_file.rs  mod.rs  raw_json_file.rs
src/plugin/: mod.rs  plugin_map.rs
src/request/: body.rs  mod.rs
src/response/: http_error.rs  http_response.rs  mod.rs
src/response/format/: mod.rs
src/response/handler/: arrow_parquet.rs  dataframe.rs  mod.rs  processor.rs  sys_info.rs
src/server/: mod.rs
tool/arrowcat/: Cargo.toml  README.md
tool/arrowcat/src/: decoder.rs  main.rs  record_batch.rs
tool/devcontainer/: Dockerfile.bookworm  Dockerfile.trixie  build  docker-compose.yml  entrypoint.sh  run
tool/devcontainer/.config/broot/: conf.hjson
tool/devcontainer/.config/helix/: config.toml  languages.toml
tool/devcontainer/config/lazygit/: config.yml
tool/devcontainer/scripts/: 10-dev-env.sh  20-dev-config-init.sh  90-welcome.sh
tool/vnc-bridge/: Dockerfile  build  entrypoint.sh  run
