[workspace]
members = ["lib"]
exclude = ["bin", "example"]
resolver = "2"

[workspace.package]
version = "0.12.1"
license = "MIT"
authors = ["Sasaki, Naoki <nsasaki@sal.co.jp>"]
keywords = ["web", "sql", "arrow", "flight", "datafusion"]
readme = "README.md"
edition = "2021"
rust-version = "1.74"
homepage = "https://github.com/sal-openlab/datafusion-server"
repository = "https://github.com/sal-openlab/datafusion-server.git"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
