[workspace]
members = ["lib"]
exclude = ["bin", "example", "tool"]
resolver = "2"

[workspace.package]
version = "0.19.0"
license = "MIT"
authors = ["Sasaki, Naoki <nsasaki@sal.co.jp>"]
keywords = ["web", "sql", "arrow", "flight", "datafusion"]
readme = "README.md"
edition = "2021"
rust-version = "1.76"
homepage = "https://github.com/sal-openlab/datafusion-server"
repository = "https://github.com/sal-openlab/datafusion-server.git"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
