[package]
name = "datafusion-server"
description = "Web server library for session-based queries using Arrow and other large datasets as data sources."
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
name = "datafusion_server"
path = "src/lib.rs"

[features]
plugin = ["pyo3", "datafusion/pyarrow"]
flight = ["arrow-flight", "tonic"]
avro = ["datafusion/avro"]
webdav = ["object_store/http"]
deltalake = ["delta_kernel"]
telemetry = ["metrics", "metrics-exporter-prometheus", "sysinfo"]
postgres = ["sqlx/postgres", "sqlx/uuid"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
once_cell = "1.21.3"
config = "0.15.16"
bytes = "1.10.1"
http-body = "1.0.1"
log = { version = "0.4.28", features = ["std"] }
simple_logger = { version = "5.0.0", features = ["timestamps"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_derive = "1.0.225"
serde_json = { version = "1.0.145", features = ["preserve_order"] }
num-traits = "0.2.19"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
jsonpath-rust = "1.0.4"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures = "0.3.31"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
tonic = { version = "0.13.1", optional = true }
reqwest = { version = "0.12.23", features = ["rustls-tls", "cookies", "json", "stream"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
mime = { version = "0.3.17" }
datafusion = { version = "50.0.0" }
arrow-flight = { version = "56.0.0", optional = true }
pyo3 = { version = "0.25.1", optional = true }
object_store = { version = "0.12.3", features = ["aws", "gcp", "azure"] }
itertools = "0.14.0"
url = "2.5.7"
delta_kernel = { version = "0.15.2", optional = true, features = ["default-engine-rustls", "arrow-56"] }
metrics = { version = "0.24.2", optional = true, default-features = false }
metrics-exporter-prometheus = { version = "0.17.2", optional = true, default-features = false }
sysinfo = { version = "0.37.0", optional = true }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = ["runtime-tokio", "runtime-tokio-rustls", "any", "chrono", "rust_decimal"] }
