[package]
name = "datafusion-server"
description = "Web server library for session-based queries using Arrow and other large datasets as data sources."
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
keywords = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lib]
name = "datafusion_server"
path = "src/lib.rs"

[features]
pyarrow = ["arrow/pyarrow"]
plugin = ["dep:pyo3", "pyarrow"]
flight = ["arrow-flight", "tonic"]
avro = ["datafusion/avro"]
webdav = ["object_store/http"]
deltalake = ["delta_kernel"]
telemetry = ["metrics", "metrics-exporter-prometheus", "sysinfo"]
postgres = ["sqlx/postgres", "sqlx/uuid"]
mysql = ["sqlx/mysql"]

[dependencies]
anyhow = "1.0.100"
thiserror = "2.0.18"
once_cell = "1.21.3"
config = "0.15.19"
bytes = "1.11.1"
http-body = "1.0.1"
log = { version = "0.4.29", features = ["std"] }
simple_logger = { version = "5.1.0", features = ["timestamps"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
num-traits = "0.2.19"
chrono = { version = "0.4.43", default-features = false, features = ["std", "clock"] }
jsonpath-rust = "1.0.4"
futures-util = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures = "0.3.31"
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
tonic = { version = "0.14.3", optional = true }
reqwest = { version = "0.13.1", features = ["rustls", "cookies", "json", "stream"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
mime = { version = "0.3.17" }
datafusion = { version = "52.1.0" }
arrow = { version = "57.1.0" }
arrow-flight = { version = "57.1.0", optional = true }
pyo3 = { version = "0.26.0", optional = true }
object_store = { version = "0.12.5", features = ["aws", "gcp", "azure"] }
itertools = "0.14.0"
url = "2.5.8"
delta_kernel = { version = "0.19.2", optional = true, features = ["default-engine-rustls", "arrow-57"] }
metrics = { version = "0.24.3", optional = true, default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", optional = true, default-features = false }
sysinfo = { version = "0.37.2", optional = true }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = ["runtime-tokio", "runtime-tokio-rustls", "any", "chrono", "rust_decimal"] }
