[package]
name = "flight-client"
version = "0.1.0"
description = "datafusion-server flight client tester"
edition = "2021"
rust-version = "1.77"
authors = ["Sasaki, Naoki <nsasaki@sal.co.jp>"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = { version = "0.3.30" }
tokio = { version = "1.37.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
tonic = { version = "0.11.0" }
arrow = { version = "52.0.0", default-features = false, features = ["prettyprint"] }
arrow-flight = { version = "52.0.0" }
