[package]
name = "arrowcat"
version = "0.2.0"
edition = "2021"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1

[dependencies]
arrow = { version = "52.0.0", default-features = false, features = ["ipc", "prettyprint"] }
base64 = "0.22.1"
clap = { version = "4.5.6", features = ["derive"] }
